# cargo-phabricator

./: Cargo.toml  README.mkd
src/: arcconfig.rs  check.rs  fmt.rs  jsonl.rs  main.rs  phab.rs  test.rs
