[package]
name = "cargo-phabricator"
version = "0.1.0"
authors = ["Simonas Kazlauskas <git@kazlauskas.me>"]
edition = "2018"


[dependencies]
thiserror = ">=1, <2"
clap = ">=2.33, <2.34"
tokio = { version = ">=0.2, <0.3", features = ["process", "io-util"] }
futures = ">=0.3, <0.4"
serde_json = ">=1, <2"
serde = { version = ">=1, <2", features = ["derive"] }
reqwest = { version = ">=0.10, <0.11", features = ["json"] }
